[Win][Clang] SOFT_LINK reports warning: implicit conversion between pointer-to-function and pointer-to-object is a Microsoft extension [-Wmicrosoft-cast] https://bugs.webkit.org/show_bug.cgi?id=191960

Reviewed by Alex Christensen.

* wtf/win/SoftLinking.h: Do reinterpret_cast<void*> a function
pointer argument of EncodePointer. Changed the type of stored
function pointer returned by EncodePointer.

Canonical link: https://commits.webkit.org/206703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238541 268f45cc-cd09-0410-ab3c-d52691b4dbfc